# kaleidoscope

./: .gitignore  README.md  architecture_readme.md  pyproject.toml
kaleidoscope/: .gitignore  __init__.py  defaults.py  renderable.py  rendersys.py  ui.py  util.py
kaleidoscope/color/: __init__.py  color.py  coloredtext.py  colorscheme.py  terminalcolorcodes.py  util.py
kaleidoscope/configuration/: new_objectspec.yaml  objectspec.yaml
kaleidoscope/formatter/: __init__.py
kaleidoscope/formatter/boto3/resources/factory/ec2/SecurityGroup/: ip_permissions.py
kaleidoscope/model/: __init__.py  attribute.py  collection.py  group.py  modelabc.py  object.py
kaleidoscope/namespace/configparser/spec/: new_object.py  object.py
kaleidoscope/spec/: __init__.py  attribute.py  collection.py  formatter.py  object.py  specmap.py
kaleidoscope/view/: __init__.py  attribute.py  collection.py  group.py  object.py  viewabc.py
tests/: test_kaleidoscope.py  testcolor.py  testmodels.py  testmodelspec.py  testrender.py  testviews.py
