[tool.poetry]
name = "kaleidoscope"
version = "0.0.1"
description = ""
authors = ["James Light <j.gareth.light@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
colorama = "^0.4.3"
ipython = "^7.13.0"
"ruamel.yaml" = "^0.16.10"
"thewired" = { git = "git@github.com:jl2501/thewired.git" }
botocore = "^1.15.29"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
