[tool.poetry]
name = "kaleidoscope"
version = "0.0.1"
description = ""
authors = ["James Light <j.gareth.light@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.3"
"ruamel.yaml" = "^0.16.10"
botocore = "^1.15.29"
#thewired = {git = "https://github.com/jl2501/thewired.git", rev = "master"}
thewired = {path = "../thewired", develop = true}
boto3 = "^1.14.28"

[tool.poetry.group.dev.dependencies]
pytest = "^4.6"
ipython = "^8.10.0"
boto3 = "^1.14.28"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
